# package-for-fish-behavior-analysis

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
fish_behavior_ana;ysis/config/: settings.py
fish_behavior_ana;ysis/core/: analyzer.py  frame_extractor.py
fish_behavior_ana;ysis/tests/: __init__.py
fish_behavior_ana;ysis/utils/: file_utils.py  visualization.py
fish_behavior_analysis/: __init__.py
fish_behavior_analysis/cli/: __init__.py  main.py
fish_behavior_analysis/config/: __init__.py
fish_behavior_analysis/core/: __init__.py  flow_processor.py
fish_behavior_analysis/tests/: test_analyzer.py  test_frame_extractor.py
fish_behavior_analysis/utils/: __init__.py
